--- a/main.tex
+++ b/main.tex
@@ -10,14 +10,14 @@
 %\include{mymacros}
 
 \title{Panduan Tingkat Akhir\\[1ex]     %your thesis title,
-        Internship II dan Tugas Akhir}   %note \\[1ex] is a line break in the title
+        Tugas Akhir}   %note \\[1ex] is a line break in the title
 
-\author{Rolly Maulana Awangga, Syafrial Fachrie Pane}             %your name
-\college{Kordinator Tugas Akhir dan Intership II}  %your college
+\author{ Syafrial Fachrie Pane}             %your name
+\college{Kordinator Tugas Akhir}  %your college
 
 %\renewcommand{\submittedtext}{change the default text here if needed}
 \degree{Politeknik Pos Indonesia}     %the degree
-\degreedate{Bandung 2018}         %the degree date
+\degreedate{Bandung 2019}         %the degree date
 
 %end the preamble and start the document
 \begin{document}
